# geo-caching-companion

./: .gitignore  DEVELOP.md  LICENSE  README.md  package-lock.json  package.json
src/: App.scss  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/algos/: alphabet_values.rs  atbasch.rs  base_encoding.rs  caesar.rs  cipher_disk.rs  fox_code.rs  hashes.rs  mod.rs  morse.rs  tom_tom.rs
src-tauri/src/science_and_technology/: base_converter.rs  complex_numbers.rs  mod.rs  quadratic_equation.rs  roman_numbers.rs
src-tauri/src/science_and_technology/irrational_numbers/: euler.rs  irrational_numbers_struct.rs  mod.rs  pi.rs
src/components/GenericAlgo/: AlgoPage.tsx
src/layout/: _checkbox-switch.scss  _select-box.scss
src/layout/Menu/: Menu.scss  Menu.tsx
src/pages/: PageData.tsx
src/pages/AlphabetValues/: AlphabetValues.lazy.tsx  AlphabetValues.scss  AlphabetValues.test.tsx  AlphabetValues.tsx
src/pages/Atbash/: Atbash.lazy.tsx  Atbash.scss  Atbash.test.tsx  Atbash.tsx
src/pages/Base/: Base.lazy.tsx  Base.test.tsx  Base.tsx
src/pages/Caesar/: Caesar.lazy.tsx  Caesar.test.tsx  Caesar.tsx
src/pages/CipherDisk/: CipherDisk.lazy.tsx  CipherDisk.scss  CipherDisk.test.tsx  CipherDisk.tsx
src/pages/ComplexNumbers/: ComplexNumbers.lazy.tsx  ComplexNumbers.scss  ComplexNumbers.test.tsx  ComplexNumbers.tsx
src/pages/FoxCode/: FoxCode.lazy.tsx  FoxCode.scss  FoxCode.test.tsx  FoxCode.tsx
src/pages/Hash/: Hash.lazy.tsx  Hash.scss  Hash.test.tsx  Hash.tsx
src/pages/Home/: Home.scss  Home.tsx
src/pages/Morse/: Morse.tsx  (+3 more)
(+18 files in other folders)
