[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
phf = "0.8.0"
regex = "1"
bimap = "0.6.2"
itertools = "0.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
base16 = "0.2.1"
base32 = "0.4.0"
base58 = "0.2.0"
base64 = '0.13.0'
base91 = "0.1.0"
sha1 = "0.10.1"
sha2 = "0.10.2"
sha3 = "0.10.1"
md5 = "0.7.0"
radix_fmt = "1.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
